--- a/src/index.css
+++ b/src/index.css
@@ -79,7 +79,7 @@ nav > div {
 
 
 a {
-  color: gold;
+  color: rgb(23, 20, 4);
   text-shadow: 2px 2px 4px rgb(237, 238, 210);
   text-decoration: none;
 }
